--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "format": "prettier --write ./src/**/*.{js,jsx}",
+    "check": "eslint --fix ./src/**/*.{js,jsx}"
   },
   "dependencies": {
     "firebase": "^10.9.0",
@@ -18,18 +20,22 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.3",
+    "react-scroll": "^1.9.0",
     "react-spinners": "^0.13.8",
     "react-toastify": "^10.0.5"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.0",
+    "@eslint/js": "^9.5.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.19",
-    "eslint": "^8.57.0",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint": "^9.5.0",
+    "eslint-plugin-react": "^7.34.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "globals": "^15.6.0",
     "postcss": "^8.4.38",
     "tailwindcss": "^3.4.1",
     "vite": "^5.2.0"
